--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 80
 
 #Conexion a Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/PatSolutions
+spring.datasource.url=jdbc:mysql://localhost:3306/Fide_Autos
 spring.datasource.username=usuario_prueba
 spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
